sumo/tests/duarouter/alternatives/style1_input/errors/route/route_cost_negative/routes.duarouter
<?xml version="1.0"?>

<!-- generated on 09/24/09 13:16:55 by SUMO duarouter Version dev-SVN-r7781
<configuration>

    <input>
        <net-file value="input_net.net.xml"/>
        <alternatives value="input_alts.rou.alt.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

</configuration>
-->

<routes>
   <vtype id="KRAUSS_DEFAULT" length="5.00" maxspeed="70.00" color="1.00,1.00,0.00">
      <carFollowing-Krauss accel="2.60" decel="4.50" sigma="0.50"/>
   </vtype>
   <vehicle id="0" type="KRAUSS_DEFAULT" depart="0.00">
      <route edges="beg middle end rend"/>
   </vehicle>
</routes>
